# rangle_rajasthan

./: .gitignore  Cargo.toml
src/: main.rs
src/models/: bank_models.rs  mod.rs  referal_code.rs  ticket_model.rs  user_model.rs
src/routes/: auth_routes.rs  bank_routes.rs  mod.rs  payment_routes.rs  ping_routes.rs  referral_routes.rs  ticket_routes.rs
src/routes/handlers/: auth_handlers.rs  bank_handlers.rs  mod.rs  payment_handlers.rs  ping_handlers.rs  referral_handlers.rs  ticket_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/services/: db.rs
src/utils/: api_responses.rs  app_state.rs  constants.rs  jwt.rs  mod.rs
