[package]
name = "ticket_booking_system"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
lettre = "0.11.14"
log4rs = "1.3.0"
actix-web = "4.9.0"
actix-cors = "0.7.0"
uuid = "1.14.0"
chrono = "0.4.39"
futures-util = "0.3.31"
mongodb = "3.2.1"
serde = "1.0.218"
serde_json = "1.0.139"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
actix-files = "0.6.6"
lazy_static = "1.5.0"
env_logger = "0.11.6"
sha256 = "1.5.0"
qrcode = "0.13"
image = "0.24"  
base64 = "0.22.1"
rand = "0.9.0"


